{
  "version": 4,
  "terraform_version": "1.5.7",
  "serial": 184,
  "lineage": "9a8feff3-0bb2-17f8-04a2-301f61f81e8f",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "react-app",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-04b70fa74e45c3917",
            "arn": "arn:aws:ec2:us-east-1:891377400738:instance/i-06714f418ac8cf93b",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-06714f418ac8cf93b",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "key-1",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0716865b47ab83a5e",
            "private_dns": "ip-10-0-1-33.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.33",
            "public_ip": "3.85.14.205",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-0d0b53d7aa21186ce",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "security_groups": [
              "sg-0f45aa6b0c7ceef82"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0c94e575ded814377",
            "tags": {
              "Name": "react-server"
            },
            "tags_all": {
              "Name": "react-server"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0f45aa6b0c7ceef82"
            ]
          },
          "dependencies": [
            "aws_security_group.react-sg",
            "aws_subnet.react-subnet",
            "aws_vpc.react-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "react-igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:891377400738:internet-gateway/igw-0430be4c4c2debbad",
            "id": "igw-0430be4c4c2debbad",
            "owner_id": "891377400738",
            "tags": {
              "Name": "react-igw"
            },
            "tags_all": {
              "Name": "react-igw"
            },
            "vpc_id": "vpc-0b665b4e24bfda707"
          },
          "dependencies": [
            "aws_vpc.react-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "react-route",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:891377400738:route-table/rtb-047fc1db3781a4d58",
            "id": "rtb-047fc1db3781a4d58",
            "owner_id": "891377400738",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0430be4c4c2debbad",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "react-route-table"
            },
            "tags_all": {
              "Name": "react-route-table"
            },
            "timeouts": null,
            "vpc_id": "vpc-0b665b4e24bfda707"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.react-igw",
            "aws_vpc.react-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "react-ass-route",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0c24e5a4d52c1233b",
            "route_table_id": "rtb-047fc1db3781a4d58",
            "subnet_id": "subnet-0c94e575ded814377"
          },
          "dependencies": [
            "aws_internet_gateway.react-igw",
            "aws_route_table.react-route",
            "aws_subnet.react-subnet",
            "aws_vpc.react-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "react-sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:891377400738:security-group/sg-0f45aa6b0c7ceef82",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0f45aa6b0c7ceef82",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 3000,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 3000
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "terraform-20240603102627614100000001",
            "name_prefix": "terraform-",
            "owner_id": "891377400738",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "react-sg"
            },
            "tags_all": {
              "Name": "react-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0b665b4e24bfda707"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.react-vpc"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "react-subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:891377400738:subnet/subnet-0c94e575ded814377",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0c94e575ded814377",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "891377400738",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "react-subnet"
            },
            "tags_all": {
              "Name": "react-subnet"
            },
            "vpc_id": "vpc-0b665b4e24bfda707"
          },
          "dependencies": [
            "aws_vpc.react-vpc"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "react-subnet-2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:891377400738:subnet/subnet-09292894872d18bf4",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-09292894872d18bf4",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "891377400738",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "react-subnet-2"
            },
            "tags_all": {
              "Name": "react-subnet-2"
            },
            "vpc_id": "vpc-0b665b4e24bfda707"
          },
          "dependencies": [
            "aws_vpc.react-vpc"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "react-vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:891377400738:vpc/vpc-0b665b4e24bfda707",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0fd691f837a63b5a2",
            "default_route_table_id": "rtb-01917ec18ebfe7e2f",
            "default_security_group_id": "sg-095d796f250b4bc85",
            "dhcp_options_id": "dopt-0ccf45802868a6c79",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0b665b4e24bfda707",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-01917ec18ebfe7e2f",
            "owner_id": "891377400738",
            "tags": {
              "Name": "react-vpc"
            },
            "tags_all": {
              "Name": "react-vpc"
            }
          },
          "create_before_destroy": true
        }
      ]
    }
  ]
}